[package]
name = "bui-backend"
description = "Brower User Interfaces (BUIs) with Tokio"
version = "0.14.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
documentation = "https://docs.rs/bui-backend/"
repository = "https://github.com/astraw/bui-backend"
readme = "README.md"
keywords = ["server", "user-interface", "server-sent-events", "futures", "tokio"]
license = "MIT/Apache-2.0"
categories = ["gui", "web-programming::http-server"]
edition = "2018"

[dependencies]
async-change-tracker = "0.3.2"
bui-backend-codegen = {version="0.9", default-features = false, path="codegen"}
bui-backend-types = {version="0.8", path="types", features=["uuid-v4"]}
futures = "0.3.0"
parking_lot = "0.12"
includedir = {version="0.6", optional=true}
tokio = {version="1.0", features=["sync", "rt"]}
tokio-stream = "0.1.8"
stream-cancel = "0.8"
http = "0.2"
url = "2"
hyper = {version="0.14", features=["server","http1","tcp","stream"]}
log = "0.4"
serde = {version="1.0",features=["derive"]}
serde_json = {version = "1.0"}
jsonwebtoken = "8"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
cookie = "0.16"
conduit-mime-types = "0.8"
dyn-clone = "1.0.5"

[features]
default = ["bundle_files"]
bundle_files = ["bui-backend-codegen/bundle_files", "includedir"]
serve_files = ["bui-backend-codegen/serve_files"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["bui-backend-types/uuid-v4"]

[workspace]
members = [
    "codegen",
    "bui-demo",
    "types",
]
