[package]
name = "bui-demo"
version = "0.5.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
build = "build.rs"
repository = "https://github.com/astraw/bui-backend"
license = "MIT/Apache-2.0"

[dependencies]
bui-backend = {version="0.7", default-features = false, path=".."}
log = "0.4"
env_logger = "0.5"
includedir = "0.2.0"
phf = "0.7.12"
serde = "1.0"
serde_json = "1.0"
clap = "2.20.0"
failure = "0.1.1"
hyper = "0.12"
dotenv = "0.10"
futures = "0.1"
tokio = "0.1"
tokio-timer = "0.2"
tokio-executor = "0.1"
bui-demo-data = {path="bui-demo-data"}

[build-dependencies]
bui-backend-codegen = {version = "0.1.4", default-features = false, path="../codegen"}

[features]
default = ["bundle_files", "frontend_js"]

# Bundle files into executable
bundle_files = ["bui-backend/bundle_files", "bui-backend-codegen/bundle_files"]
# Serve files from disk at runtime
serve_files = ["bui-backend/serve_files", "bui-backend-codegen/serve_files"]

# Use the Javascript frontend
frontend_js = []
# Use the Elm frontend
frontend_elm = []
# Use the Rust stdweb frontend
frontend_stdweb = []
# Use the Rust yew frontend
frontend_yew = []
