[package]
name = "bui-demo"
version = "0.7.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
repository = "https://github.com/astraw/bui-backend"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
async-change-tracker = "0.3.2"
bui-backend = {version="0.15", default-features = false, path=".."}
bui-backend-types = {version="0.8", path="../types", features=["uuid-v4"]}
log = "0.4"
env_logger = "0.11"
includedir = {version="0.6", optional=true}
phf = {version="0.8", optional=true}
serde = "1.0"
serde_json = "1.0"
clap = {version="4.0.2", features=["derive"]}
parking_lot = "0.12"

qrcodegen = "1.4"
dotenv = "0.15"
futures = "0.3.0"
tokio = {version="1.0", features=["macros","rt-multi-thread","time"]}
bui-demo-data = {path="bui-demo-data"}

[build-dependencies]
bui-backend-codegen = {version = "0.9", default-features = false, path="../codegen"}

[features]
default = ["bundle_files", "frontend_js"]

# Bundle files into executable
bundle_files = ["bui-backend/bundle_files", "bui-backend-codegen/bundle_files", "includedir", "phf"]
# Serve files from disk at runtime
serve_files = ["bui-backend/serve_files", "bui-backend-codegen/serve_files"]

# Use the Javascript frontend
frontend_js = []

# Use the Rust seed frontend
frontend_seed = []

# Use the Rust yew frontend
frontend_yew = []
