[package]
name = "bui-backend-codegen"
description = "Buildtime codegen support for bui-backend"
version = "0.1.3"
authors = ["Andrew Straw <strawman@astraw.com>"]
repository = "https://github.com/astraw/bui-backend"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
walkdir = "1"
includedir_codegen = "0.2.0"

[features]
default = ["bundle_files"]

bundle_files = []
serve_files = []
