[package]
name = "bui-backend-codegen"
description = "Buildtime codegen support for bui-backend"
version = "0.8.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
repository = "https://github.com/astraw/bui-backend"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
walkdir = { version = "2.2.5", optional = true }
includedir_codegen = {version="0.6", optional=true}

[features]
default = ["bundle_files"]

bundle_files = ["walkdir","includedir_codegen"]
serve_files = []
