[package]
name = "bui-backend-types"
description = "shared backend/frontend types used by bui-backend"
version = "0.7.0"
license = "MIT/Apache-2.0"
authors = ["Andrew Straw <strawman@astraw.com>"]

[dependencies]
uuid = { version = "0.7", features = ["v4", "serde"] }
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
