[package]
name = "bui-backend-types"
description = "shared backend/frontend types used by bui-backend"
version = "0.8.0"
license = "MIT/Apache-2.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8", features = ["serde"] }
serde = {version="1.0", features=["derive"]}

[features]
default = []

uuid-v4 = ["uuid/v4"]
