[package]
name = "bui-demo-frontend-rust-wasm"
version = "0.3.0"
authors = ["Andrew Straw <strawman@astraw.com>"]

[dependencies]
stdweb = "0.4"
serde = "1.0"
serde_json = "1.0"
bui-demo-data = {path="../bui-demo-data"}

# Bypass (for now) build errors when this is in the workspace below me.
[workspace]
members = []
