[package]
name = "bui-demo-frontend-seed"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# Bypass (for now) build errors when this is in the workspace below me.
[workspace]
members = []

[dependencies]
seed = "0.5"
wasm-bindgen = "0.2.45"
web-sys = {version="0.3", features=["console", "EventSource", "MessageEvent"]}
serde = "1.0.85"
serde_json = "1.0.39"
bui-demo-data = {path="../bui-demo-data"}
futures = "0.1"
