[package]
name = "bui-demo-frontend-seed"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.10.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4"
web-sys = {version="0.3", features=["console", "EventSource", "MessageEvent"]}
serde = "1.0.85"
serde_json = "1.0.39"
bui-demo-data = {path="../bui-demo-data"}
futures = "0.3"
gloo-utils = "0.2"
gloo-console = "0.2.3"
