[package]
name = "bui-demo-frontend-yew"
version = "0.3.0"
authors = ["Andrew Straw <strawman@astraw.com>"]

[dependencies]
yew = "0.3"
stdweb = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
failure = "0.1"
http = "0.1"
bui-demo-data = {path="../bui-demo-data"}

# Bypass (for now) build errors when this is in the workspace below me.
[workspace]
members = []
