[package]
name = "bui-demo-frontend-yew"
version = "0.3.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
web-sys = {version="0.3", features=["EventSource"]}
anyhow = "1.0"
gloo = { version = "0.2.1" }
wasm-bindgen = "^0.2"
log = "0.4"
wasm-logger = "0.2.0"

bui-demo-data = {path="../bui-demo-data"}

# Bypass (for now) build errors when this is in the workspace below me.
[workspace]
members = []
