[package]
name = "bui-demo-frontend-yew"
version = "0.3.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = {version="0.20.0", features=["csr"]}
wasm-bindgen = "^0.2"
js-sys = "0.3"
log = "0.4"
wasm-logger = "0.2.0"
gloo-events = "0.1.1"
gloo-utils = "0.1"
serde_json = "1"
wasm-bindgen-futures = "0.4"

bui-demo-data = {path="../bui-demo-data"}

[dependencies.web-sys]
version="0.3"
features=[
  "Event",
  "EventSource",
  "Headers",
  "HtmlInputElement",
  "MessageEvent",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
